--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payoo|Login</title>
+    <link rel="shortcut icon" href="Fav-image/Home Logo.png" type="Page Logo">
 </head>
 <body>
     
