--- a/index.html
+++ b/index.html
@@ -12,7 +12,29 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
-<body>
+<body class="bg-blue-500 h-[100vh] flex flex-col justify-center items-center">
+    <div class="h-[130px] w-[300px]  bg-[url(./assets/bg.png)] bg-cover flex justify-center items-center">
+        <img src="assets/Group.png" alt="Logo Group Pic">
+
+    </div>
+
+    <form class="w-[350px] bg-white rounded-2xl p-8 mt-5 ">
+
+        <div>
+            <label class="font-bold" for="">Mobile Number</label>
+            <br>
+            <input type="text" placeholder="Enter Your Phone Number " class="input bg-blue-200 mt-3 rounded-3xl " />
+        </div>
+
+        <div class="mt-5">
+            <label class="font-bold" for="">4 Digit Pin</label>
+            <br>
+            <input type="text" placeholder="Enter 4 Digit Pin Number" class="input bg-blue-200 mt-3  rounded-3xl " />
+        </div>
+
+        <button class="btn font-bold text-whit btn-active btn-primary mt-5 w-full rounded-3xl">Primary</button>
+
+    </form>
     
 
     <script src="payoo-DOM-Js/payoo_bank.js"></script>
