--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payoo|Login</title>
     <link rel="shortcut icon" href="Fav-image/Home Logo.png" type="Page Logo">
+    <link rel="stylesheet" href="styles/style.css">
     <!-- daisy UI -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <!-- Tailwind CDN -->
@@ -32,7 +33,7 @@
             <input type="text" placeholder="Enter 4 Digit Pin Number" class="input bg-blue-200 mt-3  rounded-3xl " />
         </div>
 
-        <button class="btn font-bold text-whit btn-active btn-primary mt-5 w-full rounded-3xl">Primary</button>
+        <button class="btn font-bold text-whit btn-active btn-primary mt-5 w-full rounded-3xl " id="btn-login">Primary</button>
 
     </form>
     
