--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payoo|Login</title>
-    <link rel="shortcut icon" href="Fav-image/Home Logo.png" type="Page Logo">
+    <link rel="shortcut icon" href="assets/Group.png" type="Page Logo">
+    <link rel="stylesheet" href="styles/style.css">
 
     <!-- daisy UI -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
@@ -13,24 +14,24 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
-<body class="bg-blue-500 h-[100vh] flex flex-col justify-center items-center">
+<body class="bg-blue-700 h-[100vh] flex flex-col justify-center items-center">
     <div class="h-[130px] w-[300px]  bg-[url(./assets/bg.png)] bg-cover flex justify-center items-center">
         <img src="assets/Group.png" alt="Logo Group Pic">
 
     </div>
 
-    <form class="w-[350px] bg-white rounded-2xl p-8 mt-5 ">
+    <form class="w-[350px] bg-white rounded-2xl p-8 mt-5">
 
         <div>
             <label class="font-bold" for="">Mobile Number</label>
             <br>
-            <input type="text" placeholder="Enter Your Phone Number " class="input bg-blue-200 mt-3 rounded-3xl " />
+            <input type="text" placeholder="Enter Your Phone Number" id="phone-Number" class="input bg-blue-200 mt-3 rounded-3xl " />
         </div>
 
         <div class="mt-5">
             <label class="font-bold" for="">4 Digit Pin</label>
             <br>
-            <input type="text" placeholder="Enter 4 Digit Pin Number" class="input bg-blue-200 mt-3  rounded-3xl " />
+            <input type="text" placeholder="Enter 4 Digit Pin Number" id="pin-Number" class="input bg-blue-200 mt-3  rounded-3xl " />
         </div>
 
         <button class="btn font-bold text-whit btn-active btn-primary mt-5 w-full rounded-3xl "
