--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <link rel="shortcut icon" href="assets/Group.png" type="Page Logo">
     <link rel="stylesheet" href="styles/style.css">
 
+
+
     <!-- daisy UI -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <!-- Tailwind CDN -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
 </head>
 
 <body class="bg-blue-700 h-[100vh] flex flex-col justify-center items-center">
@@ -25,13 +28,15 @@
         <div>
             <label class="font-bold" for="">Mobile Number</label>
             <br>
-            <input type="text" placeholder="Enter Your Phone Number" id="phone-Number" class="input bg-blue-200 mt-3 rounded-3xl " />
+            <input type="text" placeholder="Enter Your Phone Number" id="phone-Number"
+                class="input bg-blue-200 mt-3 rounded-3xl " />
         </div>
 
         <div class="mt-5">
             <label class="font-bold" for="">4 Digit Pin</label>
             <br>
-            <input type="text" placeholder="Enter 4 Digit Pin Number" id="pin-Number" class="input bg-blue-200 mt-3  rounded-3xl " />
+            <input type="text" placeholder="Enter 4 Digit Pin Number" id="pin-Number"
+                class="input bg-blue-200 mt-3  rounded-3xl " />
         </div>
 
         <button class="btn font-bold text-whit btn-active btn-primary mt-5 w-full rounded-3xl "
