--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
             <label class="font-bold" for="">4 Digit Pin</label>
             <br>
             <input type="text" placeholder="Enter 4 Digit Pin Number" id="pin-Number"
-                class="input bg-blue-200 mt-3  rounded-3xl " />
+            class="input bg-blue-200 mt-3  rounded-3xl " />
         </div>
 
         <button class="btn font-bold text-whit btn-active btn-primary mt-5 w-full rounded-3xl "
-            id="btn-login">Primary</button>
+            id="btn-login">Log In</button>
 
     </form>
 
