--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
             <div class="flex">
                 <img class="h-[50px]" src="assets/Group.png" alt="">
                 <div class="ml-5">
-                    <h1 class="font-bold"><span>$</span> 45000</h1>
+                    <h1 class="font-extrabold">$ <span id="Balance"> 45000 </span></h1>
                     <p class="text-[#08080870] font-semibold">Available Balance</p>
                 </div>
             </div>
@@ -98,7 +98,7 @@
             <form class=" bg-white rounded-2xl p-8 mt-5 border-2 border-blue-800">
                 <div class="mb-4">
                     <h1 class="font-bold text-blue-900">Select A Bank</h1>
-                    <select class="select font-bold bg-blue-200 mt-3 rounded-3xl w-full">
+                    <select id="select-Bank" class="select font-bold bg-blue-200 mt-3 rounded-3xl w-full">
                         <option disabled selected>Pick a Bank</option>
                         <option>Brack Bank</option>
                         <option>City Bank</option>
@@ -111,7 +111,7 @@
                     <label class="font-bold text-blue-900" for="">Bank Account Number</label>
                     <br>
                     <input type="text" placeholder="Enter 11 digit account number" id="ac-Number"
-                        class="input bg-blue-200 mt-3  rounded-3xl font-semibold w-full" />
+                    class="input bg-blue-200 mt-3  rounded-3xl font-semibold w-full" />
                 </div>
 
                 <!-- Amount to Add -->
@@ -119,7 +119,7 @@
                     <label class="font-bold text-blue-900" for="">Amount to Add</label>
                     <br>
                     <input type="text" placeholder="Add Amount to withdraw" id="add-Amount"
-                        class="input bg-blue-200 mt-3  rounded-3xl font-semibold w-full" />
+                    class="input bg-blue-200 mt-3  rounded-3xl font-semibold w-full" />
                 </div>
 
                 <!-- Pin Number Enter 4 digit pin number -->
@@ -131,12 +131,16 @@
                 </div>
 
                 <button class="btn font-bold text-whit btn-active btn-primary mt-5 w-full rounded-3xl "
-                    id="btn-addMoney">AddMoney</button>
+                    id="btn-addMoney">Add Money</button>
+
             </form>
+
         </div>
 
-
     </div>
+
+    <!-- Add Js file Payoo home -->
+     <script src="payoo-DOM-Js/payoo_home.js"></script>
 
 </body>
 
