cash out part done full

--- a/home.html
+++ b/home.html
@@ -49,13 +49,13 @@
 
         <div class=" min-h-[200px] grid grid-cols-3 gap-5 mt-5 mb-5 p-10">
             <!-- card 1 -->
-            <div class="border-2 border-blue-500 text-center p-5 bg-blue-100   rounded-2xl">
+            <div id="addmoney-btn" class="border-2 border-blue-500 text-center p-5 bg-blue-100   rounded-2xl">
                 <img class="mx-auto" src="assets/wallet1.png" alt="Wallet Logo">
                 <h2 class="text-[#08080870] font-semibold">Add Money</h2>
             </div>
 
             <!-- card 2 -->
-            <div class="border-2 border-blue-500 text-center p-5 bg-blue-100  rounded-2xl">
+            <div id="cashout-btn" class="border-2 border-blue-500 text-center p-5 bg-blue-100  rounded-2xl">
                 <img class="mx-auto" src="assets/send1.png" alt="Cashout Logo">
                 <h2 class="text-[#08080870] font-semibold">CashOut</h2>
             </div>
@@ -93,7 +93,7 @@
     <!-- All Form Section -->
     <div class="form-section max-w-lg mx-auto">
         <!-- Add Money -->
-        <div class="mx-5">
+        <div id="addmoney-parent" style="display: none;" class="mx-5">
             <h1 class="font-bold text-[22px] text-[white]">Add Money</h1>
             <form class=" bg-white rounded-2xl p-8 mt-5 border-2 border-blue-800">
                 <div class="mb-4">
@@ -111,7 +111,7 @@
                     <label class="font-bold text-blue-900" for="">Bank Account Number</label>
                     <br>
                     <input type="text" placeholder="Enter 11 digit account number" id="ac-Number"
-                    class="input bg-blue-200 mt-3  rounded-3xl font-semibold w-full" />
+                        class="input bg-blue-200 mt-3  rounded-3xl font-semibold w-full" />
                 </div>
 
                 <!-- Amount to Add -->
@@ -119,7 +119,7 @@
                     <label class="font-bold text-blue-900" for="">Amount to Add</label>
                     <br>
                     <input type="text" placeholder="Add Amount to withdraw" id="add-Amount"
-                    class="input bg-blue-200 mt-3  rounded-3xl font-semibold w-full" />
+                        class="input bg-blue-200 mt-3  rounded-3xl font-semibold w-full" />
                 </div>
 
                 <!-- Pin Number Enter 4 digit pin number -->
@@ -127,7 +127,7 @@
                     <label class="font-bold text-blue-900" for="">Pin Number</label>
                     <br>
                     <input type="text" placeholder="Enter 4 Digit Pin Number" id="home-pinNumber"
-                    class="input bg-blue-200 mt-3  rounded-3xl font-semibold w-full" />
+                        class="input bg-blue-200 mt-3  rounded-3xl font-semibold w-full" />
                 </div>
 
                 <button class="btn font-bold text-whit btn-active btn-primary mt-5 w-full rounded-3xl "
@@ -137,10 +137,46 @@
 
         </div>
 
+        <!-- Cash-Out -->
+        <div id="cashout-parent" style="display:none;" class="mx-5">
+            <h1 class="font-bold text-[22px] text-[white]">Cash Out</h1>
+            <form class=" bg-white rounded-2xl p-8 mt-5 border-2 border-blue-800">
+
+                <!-- Agent Number -->
+                <div class="mb-4">
+                    <label class="font-bold text-blue-900" for="">Agent Number</label>
+                    <br>
+                    <input type="text" placeholder="Enter 11 Digit Number" id="agent-Number"
+                        class="input bg-blue-200 mt-3  rounded-3xl font-semibold w-full" />
+                </div>
+
+                <!-- Amount to Withdraw -->
+                <div class="mb-4">
+                    <label class="font-bold text-blue-900" for="">Amount</label>
+                    <br>
+                    <input type="text" placeholder="Enter amount to withdraw" id="withdraw-Amount"
+                        class="input bg-blue-200 mt-3  rounded-3xl font-semibold w-full" />
+                </div>
+
+                <!-- Pin Number Enter 4 digit pin number -->
+                <div class="mb-4">
+                    <label class="font-bold text-blue-900" for="">Pin Number</label>
+                    <br>
+                    <input type="text" placeholder="Enter 4 Digit Pin Number" id="withdraw-pinNumber"
+                        class="input bg-blue-200 mt-3  rounded-3xl font-semibold w-full" />
+                </div>
+
+                <button class="btn font-bold text-whit btn-active btn-primary mt-5 w-full rounded-3xl "
+                    id="btn-addMoney">Add
+                    Money</button>
+
+            </form>
+        </div>
+
     </div>
 
     <!-- Add Js file Payoo home -->
-     <script src="payoo-DOM-Js/payoo_home.js"></script>
+    <script src="payoo-DOM-Js/payoo_home.js"></script>
 
 </body>
 
