--- a/home.html
+++ b/home.html
@@ -69,7 +69,7 @@
 
 
             <!-- card 4 -->
-            <div class="border-2 border-blue-500 text-center p-5 bg-blue-100  rounded-2xl">
+            <div id="transfer-btn" class="border-2 border-blue-500 text-center p-5 bg-blue-100  rounded-2xl">
                 <img class="mx-auto" src="assets/money1.png" alt="Transfer Logo">
                 <h2 class="text-[#08080870] font-semibold">Transfer</h2>
             </div>
@@ -167,11 +167,51 @@
                 </div>
 
                 <button class="btn font-bold text-whit btn-active btn-primary mt-5 w-full rounded-3xl "
-                    id="btn-addMoney">Add
-                    Money</button>
+                    id="btn-addMoney">Withdraw Money</button>
 
             </form>
         </div>
+
+
+        <!-- Transfer Money -->
+        <div id="transfer-parent" style="display:none;" class="mx-5">
+            <h1 class="font-bold text-[22px] text-[white]">Transfer Money</h1>
+            <form class=" bg-white rounded-2xl p-8 mt-5 border-2 border-blue-800">
+
+                <!-- User Number -->
+                <div class="mb-4">
+                    <label class="font-bold text-blue-900" for="">User Account Number</label>
+                    <br>
+                    <input type="text" placeholder="Enter 11 Digit Number" id="user-Number"
+                        class="input bg-blue-200 mt-3  rounded-3xl font-semibold w-full" />
+                </div>
+
+                <!-- Amount to Transfer -->
+                <div class="mb-4">
+                    <label class="font-bold text-blue-900" for="">Amount</label>
+                    <br>
+                    <input type="text" placeholder="Enter Amount to Transfer" id="transfer-Amount"
+                        class="input bg-blue-200 mt-3  rounded-3xl font-semibold w-full" />
+                </div>
+
+                <!-- Pin Number Enter 4 digit pin number -->
+                <div class="mb-4">
+                    <label class="font-bold text-blue-900" for="">Pin Number</label>
+                    <br>
+                    <input type="text" placeholder="Enter 4 Digit Pin Number" id="transfer-pinNumber"
+                        class="input bg-blue-200 mt-3  rounded-3xl font-semibold w-full" />
+                </div>
+
+                <button class="btn font-bold text-whit btn-active btn-primary mt-5 w-full rounded-3xl "
+                    id="btn-addMoney">Send Now</button>
+
+            </form>
+
+
+        </div>
+
+
+
 
     </div>
 
