get bonus and pay bill button has been activet done

--- a/home.html
+++ b/home.html
@@ -220,12 +220,12 @@
                 <div class="mb-4">
                     <label class="font-bold text-blue-900" for="">Enter Bonus Coupon</label>
                     <br>
-                    <input type="text" placeholder="Enter your coupon" id="transfer-pinNumber"
+                    <input type="text" placeholder="Enter your coupon" id="coupon-Number"
                         class="input bg-blue-200 mt-3  rounded-3xl font-semibold w-full" />
                 </div>
 
                 <button class="btn font-bold text-whit btn-active btn-primary mt-5 w-full rounded-3xl "
-                    id="btn-addMoney">Get
+                    id="btn-bonusMoney">Get
                     Bonus</button>
 
             </form>
@@ -236,6 +236,7 @@
         <div id="payBill-parent" style="display: none;" class="mx-5">
             <h1 class="font-bold text-[22px] text-[white]">Select To Pay</h1>
             <form class=" bg-white rounded-2xl p-8 mt-5 border-2 border-blue-800">
+                <!-- pay bill bank -->
                 <div class="mb-4">
                     <h1 class="font-bold text-blue-900">Select A Bank</h1>
                     <select id="paybill-Bank" class="select font-bold bg-blue-200 mt-3 rounded-3xl w-full">
@@ -250,13 +251,13 @@
                 <div class="mb-4">
                     <label class="font-bold text-blue-900" for="">Biller Account Number</label>
                     <br>
-                    <input type="text" placeholder="Enter 11 digit Biller Account Number" id="Billerac-Number"
+                    <input type="text" placeholder="Enter 11 digit Biller Account Number" id="BillerAC-Number"
                         class="input bg-blue-200 mt-3  rounded-3xl font-semibold w-full" />
                 </div>
 
-                <!-- Amount to Add -->
+                <!-- Amount to Pay -->
                 <div class="mb-4">
-                    <label class="font-bold text-blue-900" for="">Amount to Add</label>
+                    <label class="font-bold text-blue-900" for="">Amount to Pay</label>
                     <br>
                     <input type="text" placeholder="Add Amount to Pay" id="bill-Amount"
                         class="input bg-blue-200 mt-3  rounded-3xl font-semibold w-full" />
@@ -271,7 +272,7 @@
                 </div>
 
                 <button class="btn font-bold text-whit btn-active btn-primary mt-5 w-full rounded-3xl "
-                    id="btn-addMoney">Pay Now</button>
+                    id="btn-payBill">Pay Now</button>
 
             </form>
 
